charts/factory/manuela-factory/templates/messaging/messaging-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: messaging
  name: messaging
  namespace: factory-messaging
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: messaging
    deploymentconfig: messaging
  sessionAffinity: None
  type: ClusterIP
