charts/factory/manuela-factory/templates/messaging/messaging-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: messaging
  namespace: factory-messaging
spec:
  subdomain: messaging-factory-messaging
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: messaging
    weight: 100
  wildcardPolicy: None
